tests/sksl/errors/ReservedNameInvariant.glsl
### Compilation failed:

error: 1: 'invariant' is a reserved word
1 error
